# documentProcessing

./: README.md
backend/commons/src/commons/db/: base.py  model.py
backend/commons/src/commons/schema/: pydantic_model.py
backend/doc_apis/: pyproject.toml  requirements.txt
backend/doc_apis/src/doc_apis/: service.py
backend/doc_apis/src/doc_apis/apis/: doc_mgmt_apis.py  predict_mgmt_apis.py
backend/doc_apis/src/doc_apis/services/: docs_service.py  predict_service.py
backend/doc_apis/src/doc_apis/utils/: util.py
