[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "doc_apis"
version = "0.0.1"
authors = [
    {name="Sarthak", email="sarthak.bhatkar.21@gmail.com"}
]
description = "Webservices for document processing"

readme = "README.md"
requires-python = ">=3.9"

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
